// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`upgrade > setCode works 2`] = `
{
  "consumers": 0,
  "data": {
    "feeFrozen": 0,
    "free": 1000000000000,
    "miscFrozen": 0,
    "reserved": 0,
  },
  "nonce": 0,
  "providers": 1,
  "sufficients": 0,
}
`;

exports[`upgrade > setCode works 3`] = `
{
  "consumers": 0,
  "data": {
    "feeFrozen": 0,
    "free": 2000000000000,
    "miscFrozen": 0,
    "reserved": 0,
  },
  "nonce": 0,
  "providers": 1,
  "sufficients": 0,
}
`;
